<resources>
    <string name="app_name">Personal Trainer</string>
    <string name="client_list_page_name">Clients</string>
    <string name="client_page_name">Client</string>
    <string name="login_label">User sign in</string>
    <string name="successful_login">Login successful!</string>
    <string name="unsuccessful_login">Login unsuccessful.</string>
    <string name="username">jdoe1</string>
    <string name="password">welcome1</string>
    <string name="username_textview_label">Enter username:</string>
    <string name="password_textview_label">Enter password:</string>
    <string name="log_off_dialog_title">Log off</string>
    <string name="client_profile_image_description">Client profile image</string>
    <string name="client_name_hint">Enter the client\'s name</string>
    <string name="session_function_description">Workout Sessions</string>
    <string name="payment_function_description">Payment Methods</string>
    <string name="contact_function_description">Contact Methods</string>
    <string name="session_icon_label">Session</string>
    <string name="payment_icon_label">Payment</string>
    <string name="contact_icon_label">Contact</string>
    <string name="add_session_label_button">Add Session</string>
    <string name="session_history">Session History:</string>
    <string name="session_date_label">Date</string>
    <string name="session_title_label">Title</string>
    <string name="session_title_hint">Enter a brief title for the appointment</string>
    <string name="session_description_label">Description</string>
    <string name="session_description_hint">Enter a description for the session</string>
    <string name="session_completed_label">Completed</string>
    <string name="date_picker_title">Client\'s session date:</string>
    <string name="information_for_date_picker">Information about session:</string>
    <string name="credit_card_payment">Credit Card</string>
    <string name="cash_payment_label">Cash</string>
    <string name="add_contact">Add Contact</string>
    <string name="phone_label_text_view">Phone</string>
    <string name="email_label_text_view">Email</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="print_receipt_label_text_view">Print</string>
    <string name="email_receipt_label_text_view">Email</string>
    <string name="generate_receipt_label_button">Generate Receipt</string>
    <string name="user_logged_in">Logged in as %s</string>
    <string name="new_client">New Client</string>
    <string name="user_logout">Logout</string>
</resources>
