<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_date_label"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/session_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_title_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/session_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/session_title_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_description_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/session_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/session_description_hint"/>

    <CheckBox
        android:id="@+id/session_completed_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/session_completed_label"/>
</LinearLayout>